--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
     <div id="quiz-container">
         <h1>Quiz</h1>
+		<div id="questions">
         <form id="quiz-form">
             <div class="question" data-question-id="1">
                 <p>1. What is the capital of France?</p>
@@ -47,6 +48,7 @@
             </div>
             <button type="button" id="submit-btn">Submit</button>
         </form>
+		</div>
         <div id="result"></div>
     </div>
     <script src="script.js"></script>
