--- a/main.html
+++ b/main.html
@@ -9,37 +9,36 @@
 <body>
     <div id="quiz-container">
         <h1>Quiz</h1>
-		<div id="questions">
         <form id="quiz-form">
-            <div class="question" data-question-id="1">
+            <div class="questions" data-question-id="1">
                 <p>1. What is the capital of France?</p>
                 <label><input type="radio" name="q1" value="A"> A. Paris</label><br>
                 <label><input type="radio" name="q1" value="B"> B. London</label><br>
                 <label><input type="radio" name="q1" value="C"> C. Rome</label><br>
                 <label><input type="radio" name="q1" value="D"> D. Madrid</label>
             </div>
-            <div class="question" data-question-id="2">
+            <div class="questions" data-question-id="2">
                 <p>2. Which planet is known as the Red Planet?</p>
                 <label><input type="radio" name="q2" value="A"> A. Earth</label><br>
                 <label><input type="radio" name="q2" value="B"> B. Mars</label><br>
                 <label><input type="radio" name="q2" value="C"> C. Jupiter</label><br>
                 <label><input type="radio" name="q2" value="D"> D. Venus</label>
             </div>
-            <div class="question" data-question-id="3">
+            <div class="questions" data-question-id="3">
                 <p>3. What is the largest ocean on Earth?</p>
                 <label><input type="radio" name="q3" value="A"> A. Atlantic Ocean</label><br>
                 <label><input type="radio" name="q3" value="B"> B. Indian Ocean</label><br>
                 <label><input type="radio" name="q3" value="C"> C. Arctic Ocean</label><br>
                 <label><input type="radio" name="q3" value="D"> D. Pacific Ocean</label>
             </div>
-            <div class="question" data-question-id="4">
+            <div class="questions" data-question-id="4">
                 <p>4. Who wrote 'To Kill a Mockingbird'?</p>
                 <label><input type="radio" name="q4" value="A"> A. Harper Lee</label><br>
                 <label><input type="radio" name="q4" value="B"> B. Mark Twain</label><br>
                 <label><input type="radio" name="q4" value="C"> C. J.K. Rowling</label><br>
                 <label><input type="radio" name="q4" value="D"> D. Jane Austen</label>
             </div>
-            <div class="question" data-question-id="5">
+            <div class="questions" data-question-id="5">
                 <p>5. What is the smallest prime number?</p>
                 <label><input type="radio" name="q5" value="A"> A. 0</label><br>
                 <label><input type="radio" name="q5" value="B"> B. 1</label><br>
@@ -48,7 +47,6 @@
             </div>
             <button type="button" id="submit-btn">Submit</button>
         </form>
-		</div>
         <div id="result"></div>
     </div>
     <script src="script.js"></script>
