--- a/main.html
+++ b/main.html
@@ -1,54 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Application</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="quiz-container">
-        <h1>Quiz</h1>
-        <form id="quiz-form">
-            <div class="questions" data-question-id="1">
-                <p>1. What is the capital of France?</p>
-                <label><input type="radio" name="q1" value="A"> A. Paris</label><br>
-                <label><input type="radio" name="q1" value="B"> B. London</label><br>
-                <label><input type="radio" name="q1" value="C"> C. Rome</label><br>
-                <label><input type="radio" name="q1" value="D"> D. Madrid</label>
-            </div>
-            <div class="questions" data-question-id="2">
-                <p>2. Which planet is known as the Red Planet?</p>
-                <label><input type="radio" name="q2" value="A"> A. Earth</label><br>
-                <label><input type="radio" name="q2" value="B"> B. Mars</label><br>
-                <label><input type="radio" name="q2" value="C"> C. Jupiter</label><br>
-                <label><input type="radio" name="q2" value="D"> D. Venus</label>
-            </div>
-            <div class="questions" data-question-id="3">
-                <p>3. What is the largest ocean on Earth?</p>
-                <label><input type="radio" name="q3" value="A"> A. Atlantic Ocean</label><br>
-                <label><input type="radio" name="q3" value="B"> B. Indian Ocean</label><br>
-                <label><input type="radio" name="q3" value="C"> C. Arctic Ocean</label><br>
-                <label><input type="radio" name="q3" value="D"> D. Pacific Ocean</label>
-            </div>
-            <div class="questions" data-question-id="4">
-                <p>4. Who wrote 'To Kill a Mockingbird'?</p>
-                <label><input type="radio" name="q4" value="A"> A. Harper Lee</label><br>
-                <label><input type="radio" name="q4" value="B"> B. Mark Twain</label><br>
-                <label><input type="radio" name="q4" value="C"> C. J.K. Rowling</label><br>
-                <label><input type="radio" name="q4" value="D"> D. Jane Austen</label>
-            </div>
-            <div class="questions" data-question-id="5">
-                <p>5. What is the smallest prime number?</p>
-                <label><input type="radio" name="q5" value="A"> A. 0</label><br>
-                <label><input type="radio" name="q5" value="B"> B. 1</label><br>
-                <label><input type="radio" name="q5" value="C"> C. 2</label><br>
-                <label><input type="radio" name="q5" value="D"> D. 3</label>
-            </div>
-            <button type="button" id="submit-btn">Submit</button>
-        </form>
-        <div id="result"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!-- do not change this code -->
+    <h1>Quiz</h1>
+    <div id="questions"></div>
+    <button id="submit">Submit</button>
+    <div id="score"></div>
+
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
